- Created ProductImage entity class to store image links attached to the product; - Added Product.List<ProductImage> to the Product entity; - Changed ProductController.addProduct accordingly.