@@ -15,72 +15,96 @@ import java.util.List;
 
 @Entity
 @Table(name = "local_user")
+@Getter // Apply to all fields by default
+@Setter // Apply to all fields by default
 public class LocalUser implements UserDetails {
 
-    @Setter
-    @Getter
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id", nullable = false)
     private Long id;
 
-    @Getter
-    @Setter
     @Column(name = "email", nullable = false, unique = true, length = 320)
     private String email;
 
-    @Setter
-    @Getter
-    @JsonIgnore
+    @JsonIgnore // Good for not exposing this directly
     @Column(name = "is_email_verified", nullable = false)
     @ColumnDefault("false")
     private boolean isEmailVerified;
 
-    @Setter
-    @JsonIgnore
+    @JsonIgnore // Essential for security
     @Column(name = "password", nullable = false, length = 1000)
     private String password;
 
 
-    @Getter
     @JsonIgnore
     @OneToMany(mappedBy = "localUser", cascade = CascadeType.ALL, orphanRemoval = true)
     @OrderBy("id desc")
-    private transient List<VerificationToken> verificationTokens = new ArrayList<>();
+    private List<VerificationToken> verificationTokens = new ArrayList<>();
 
-    @Setter
-    @Getter
+    @JsonIgnore
+    @OneToMany(mappedBy = "localUser", cascade = CascadeType.REMOVE, orphanRemoval = true) // Consider REMOVE only or no cascade
+    private List<Address> addresses = new ArrayList<>();
+
+    @JsonIgnore
+    @OneToMany(mappedBy = "localUser", cascade = CascadeType.ALL, orphanRemoval = true)
+    @OrderBy("id desc")
+    private List<ResetPasswordToken> resetPasswordTokens = new ArrayList<>();
+
     @JsonIgnore
     @OneToMany(mappedBy = "localUser", cascade = CascadeType.REMOVE, orphanRemoval = true)
-    private transient List<Address> addresses = new ArrayList<>();
+    private List<UserOrder> userOrders = new ArrayList<>();
 
-    @Setter
-    @JsonIgnore
-    @OneToMany(mappedBy = "localUser", cascade = CascadeType.ALL, orphanRemoval = true)
-    @OrderBy("id desc")
-    private transient List<ResetPasswordToken> resetPasswordTokens = new ArrayList<>();
 
-    @Setter
-    @Getter
-    @OneToMany(mappedBy = "localUser", cascade = CascadeType.ALL, orphanRemoval = true)
-    private transient List<UserOrder> userOrders = new ArrayList<>();
+    public void addVerificationToken(VerificationToken token) {
+        this.verificationTokens.add(token);
+        token.setLocalUser(this);
+    }
+
+    public void removeVerificationToken(VerificationToken token) {
+        this.verificationTokens.remove(token);
+        token.setLocalUser(null);
+    }
+
+    public void addAddress(Address address) {
+        this.addresses.add(address);
+        address.setLocalUser(this);
+    }
+
+    public void removeAddress(Address address) {
+        this.addresses.remove(address);
+        address.setLocalUser(null);
+    }
 
     public void addResetPasswordToken(ResetPasswordToken resetPasswordToken) {
-        resetPasswordTokens.add(resetPasswordToken);
+        this.resetPasswordTokens.add(resetPasswordToken);
+        resetPasswordToken.setLocalUser(this);
     }
 
-    public List<ResetPasswordToken> getAllResetPasswordTokens() {
-        return this.resetPasswordTokens;
+    public void removeResetPasswordToken(ResetPasswordToken resetPasswordToken) {
+        this.resetPasswordTokens.remove(resetPasswordToken);
+        resetPasswordToken.setLocalUser(null);
     }
+
+    public void addUserOrder(UserOrder order) {
+        this.userOrders.add(order);
+        order.setLocalUser(this);
+    }
+
+    public void removeUserOrder(UserOrder order) {
+        this.userOrders.remove(order);
+        order.setLocalUser(null);
+    }
+
 
 
     @JsonIgnore
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        // TODO: Implement roles/authorities if needed for authorization
+        return Collections.emptyList(); // Or a custom empty list implementation
     }
 
-    @JsonIgnore
     @Override
     public String getPassword() {
         return password;
@@ -88,36 +112,27 @@ public class LocalUser implements UserDetails {
 
     @Override
     public String getUsername() {
-        return email;
+        return email; // Email is used as the username for authentication
     }
 
-    @JsonIgnore
     @Override
     public boolean isAccountNonExpired() {
-//        return UserDetails.super.isAccountNonExpired();
-        return true;
+        return true; // TODO: Implement account expiration logic if desired
     }
 
-
-    @JsonIgnore
     @Override
     public boolean isAccountNonLocked() {
-//        return UserDetails.super.isAccountNonLocked();
-        return true;
+        return true; // TODO: Implement account locking logic (e.g., after multiple failed login attempts)
     }
 
-    @JsonIgnore
     @Override
     public boolean isCredentialsNonExpired() {
-//        return UserDetails.super.isCredentialsNonExpired();
-        return true;
+        return true; // TODO: Implement password expiry logic
     }
 
-    @JsonIgnore
     @Override
     public boolean isEnabled() {
-//        return UserDetails.super.isEnabled();
-        return true;
+        // This is often tied to email verification or an admin-enabled flag
+        return isEmailVerified; // Example: account is enabled only if email is verified
     }
-
 }
